--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -326,7 +326,7 @@
     "        if w.tag.POS == 'VERB':\n",
     "            verbs.append(w.normal_form)\n",
     "    top20 = Counter(verbs).most_common(20)\n",
-    "    print('Топ-20 частотных глаголов:')\n",
+    "    print('Топ-20 частотных :')\n",
     "    for k in top20:\n",
     "        print(k[0])\n",
     "popular_verbs(token_text)"
@@ -341,7 +341,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Топ-20 частотных глаголов:\n",
+      "Топ-20 частотных наречий:\n",
       "уж\n",
       "теперь\n",
       "здесь\n",
